tests/integration/enums/enum_simple_error.june
// error: could not find match enum case

enum State {
    None
}

fun main() {
    let x = State::None

    match x {
        State::Some => println(c"Some")
    }
}